<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/srl_dashboard">
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/layout_emptystate"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                layout="@layout/layout_empty_state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/tv_thingsToDo"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/thingsToDo"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_thingsToDo"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="@dimen/dimen_33dp"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_thingsToDo"
                    tools:listitem="@layout/row_item_thingstodo"/>
                <TextView
                    android:id="@+id/tv_FeaturedEvents"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/featuredEvents"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_thingsToDo"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_FeaturedEvents"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_FeaturedEvents"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>

                <TextView
                    android:id="@+id/tv_comedy"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/comedy"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@+id/rv_FeaturedEvents"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_comedy"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_comedy"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>
                <TextView
                    android:id="@+id/tv_music"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/music"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_comedy"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_music"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_music"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>
                <TextView
                    android:id="@+id/tv_workshops"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/workshops"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_music"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_workshops"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_workshops"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>

                <TextView
                    android:id="@+id/tv_onlineCoarse"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_10dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/online_course"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_workshops"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_onlineCoarse"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_onlineCoarse"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>

                <TextView
                    android:id="@+id/tv_talks"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="@dimen/dimen_0dp"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginLeft="@dimen/dimen_10dp"
                    android:paddingBottom="@dimen/dimen_10dp"
                    android:fontFamily="casual"
                    android:text="@string/talks"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/dimen_14dp"
                    android:textStyle="bold"
                    app:layout_constraintTop_toBottomOf="@id/rv_onlineCoarse"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_talks"
                    android:layout_width="@dimen/dimen_0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="@dimen/dimen_10dp"
                    android:layout_marginRight="@dimen/dimen_10dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_talks"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="@dimen/dimen_100dp"
                    android:orientation="horizontal"
                    tools:itemCount="1"
                    tools:listitem="@layout/row_item_events"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_progress"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <ProgressBar
                android:id="@+id/pb_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:indeterminateTint="@color/colorPrimaryDark"/>
            <TextView
                android:id="@+id/quicky_msg"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="casual"
                android:textSize="@dimen/dimen_12dp"
                android:textStyle="italic"
                android:padding="@dimen/dimen_10dp"
                android:gravity="center"
                android:layout_width="@dimen/dimen_0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/pb_progress"
                android:layout_marginTop="@dimen/dimen_10dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>